// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useReduceTradePositionWithLoss > calls useSendTransaction with correct parameters when lossSwapQuote is provided 1`] = `
{
  "abi": Any<Array>,
  "address": "0xfakeRelativePositionManagerContractAddress",
  "args": [
    "0x170d3b2da05cc2124334240fB34ad1359e34C562",
    "0xD5C4C2e2facBEB59D0216D0595d63FcDc6F9A1a7",
    5000n,
    49000000n,
    50000000n,
    50000000n,
    "0x",
    14000000n,
    13000000n,
    "0x",
  ],
  "functionName": "closeWithLoss",
}
`;

exports[`useReduceTradePositionWithLoss > calls useSendTransaction with correct parameters when lossSwapQuote is provided 2`] = `
[
  [
    {
      "queryKey": [
        "GET_RAW_TRADE_POSITIONS",
      ],
    },
  ],
  [
    {
      "queryKey": [
        "GET_ACCOUNT_TRANSACTION_HISTORY",
      ],
    },
  ],
]
`;

exports[`useReduceTradePositionWithLoss > defaults second swap parameters to zero values when optional loss inputs are omitted 1`] = `
{
  "abi": Any<Array>,
  "address": "0xfakeRelativePositionManagerContractAddress",
  "args": [
    "0x170d3b2da05cc2124334240fB34ad1359e34C562",
    "0xD5C4C2e2facBEB59D0216D0595d63FcDc6F9A1a7",
    5000n,
    49000000n,
    50000000n,
    50000000n,
    "0x",
    0n,
    0n,
    "0x",
  ],
  "functionName": "closeWithLoss",
}
`;

exports[`useReduceTradePositionWithLoss > falls back to repayShortAmountMantissa when lossSwapQuote is not provided 1`] = `
{
  "abi": Any<Array>,
  "address": "0xfakeRelativePositionManagerContractAddress",
  "args": [
    "0x170d3b2da05cc2124334240fB34ad1359e34C562",
    "0xD5C4C2e2facBEB59D0216D0595d63FcDc6F9A1a7",
    5000n,
    49000000n,
    50000000n,
    50000000n,
    "0x",
    0n,
    12000000n,
    "0x",
  ],
  "functionName": "closeWithLoss",
}
`;
